Kubernetes/13_network_policies/files/1_deployments.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: np
---
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: np
  labels:
    app: front
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: front
---
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: np
  labels:
    app: app2
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: app2
---
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: np
  labels:
    app: app1
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: app1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: np
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
        id: frontend
    spec:
      containers:
      - name: front
        image: przemekmalak/multitool
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: np
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
        id: backend
    spec:
      containers:
      - name: app2
        image: przemekmalak/multitool
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: np
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
        id: backend
    spec:
      containers:
      - name: app1
        image: przemekmalak/multitool
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
