Kubernetes/13_network_policies/files/3_allow_ingress_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: srv-network-policy
  namespace: np
spec:
  podSelector:
    matchLabels:
      id: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: np
    - podSelector:
        matchLabels:
          id: frontend
