Kubernetes/13_network_policies/files/4_egress_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-network-policy
  namespace: np
spec:
  podSelector:
    matchLabels:
      id: frontend
  policyTypes:
  - Egress
